<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Estudiante extends Model
{
    protected $fillable = [
        'user_id',
        'cliente_id',
        'fecha_nacimiento',
        'nivel',
    ];
}
