<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Paquete extends Model
{
    protected $fillable = [
        'nombre',
        'minutos',
        'descuento',
        'precio',
    ];
}
